# policyarena

./: .coverage  .gitignore  ARCHITECTURE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  main-guard.yml  publish.yml  release.yml
scenarios/: battle_of_sexes_coordination.yaml  el_farol_prediction.yaml  hawk_dove_aggression.yaml  pd_rl_vs_rulebased.yaml  public_goods_rl.yaml  sir_isolation_strategies.yaml
src/policy_arena/: __init__.py  _logging.py  errors.py  registration.py  registry.py  tracing.py
src/policy_arena/brains/: __init__.py  base.py
src/policy_arena/brains/llm/: __init__.py  dual_role_brain.py  llm_brain.py  shared.py
src/policy_arena/brains/rl/: __init__.py  bandit.py  best_response.py  q_learning.py
src/policy_arena/brains/rule_based/: __init__.py  always_cooperate.py  always_defect.py  pavlov.py  random_brain.py  tit_for_tat.py
src/policy_arena/cli/: main.py
src/policy_arena/core/: __init__.py  engine.py  extractors.py  scenario.py  types.py
src/policy_arena/games/: parallel.py
src/policy_arena/games/battle_of_sexes/: __init__.py  __main__.py  agents.py  brains.py  llm_adapter.py  model.py  rl_adapter.py
src/policy_arena/games/chicken/: __init__.py  __main__.py  agents.py  brains.py  llm_adapter.py  model.py  rl_adapter.py
src/policy_arena/games/commons/: __init__.py  __main__.py  agents.py  brains.py  llm_adapter.py  model.py  rl_adapter.py  types.py
src/policy_arena/games/el_farol/: GAME.md  __init__.py  __main__.py  agents.py  brains.py  llm_adapter.py  model.py  rl_adapter.py  types.py
src/policy_arena/games/hawk_dove/: __init__.py  __main__.py  agents.py  brains.py  llm_adapter.py  model.py  rl_adapter.py
src/policy_arena/games/minority_game/: __init__.py  __main__.py  agents.py  brains.py  llm_adapter.py  model.py  rl_adapter.py  types.py
src/policy_arena/games/prisoners_dilemma/: GAME.md  __init__.py  __main__.py  agents.py  llm_adapter.py  model.py  rl_adapter.py
src/policy_arena/games/public_goods/: GAME.md  __init__.py  __main__.py  agents.py  brains.py  llm_adapter.py  model.py  rl_adapter.py  types.py
src/policy_arena/games/schelling/: __init__.py  __main__.py  agents.py  brains.py  model.py  rl_adapter.py  types.py
src/policy_arena/games/sir/: __init__.py  __main__.py  agents.py  brains.py  model.py  rl_adapter.py  types.py
src/policy_arena/games/stag_hunt/: __init__.py  __main__.py  agents.py  brains.py  llm_adapter.py  model.py  rl_adapter.py
src/policy_arena/games/trust_game/: __init__.py  __main__.py  agents.py  brains.py  llm_adapter.py  model.py  rl_adapter.py  types.py
src/policy_arena/games/ultimatum/: GAME.md  __init__.py  __main__.py  agents.py  brains.py  llm_adapter.py  model.py  rl_adapter.py  types.py
src/policy_arena/io/: __init__.py  config_loader.py  results_reader.py  results_writer.py  schemas.py
src/policy_arena/llm/: __init__.py  provider.py
src/policy_arena/metrics/: __init__.py  adaptation_speed.py  cooperation.py  entropy.py  gini.py  nash_distance.py  reciprocity.py  regret.py  social_welfare.py
src/policy_arena/scenarios/: chicken_brinkmanship.yaml  commons_sustainability.yaml  minority_game_contrarian.yaml  schelling_mixed.yaml  stag_hunt_mixed.yaml  trust_game_reciprocity.yaml  ultimatum_fairness.yaml
tests/: test_battle_of_sexes.py  test_brains.py  test_chicken.py  test_commons.py  test_el_farol.py  test_hawk_dove.py  test_io.py  test_llm_brains.py  test_metrics.py  test_minority_game.py  test_prisoners_dilemma.py  test_public_goods.py  test_rl_brains.py  test_schelling.py  test_sir.py  test_stag_hunt.py  test_trust_game.py  test_ultimatum.py
