[project]
name = "policy-arena"
version = "0.1.1"
description = "Cross-paradigm simulation engine for game-theoretic agent research"
license = {text = "MIT"}
readme = "README.md"
authors = [
    { name = "Nikit Baklazhenko", email = "vikivikovik@gmail.com" }
]
keywords = ["game-theory", "simulation", "multi-agent", "reinforcement-learning", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.12"
dependencies = [
    "mesa>=3.0",
    "networkx>=3.6.1",
    "numpy>=1.26",
    "polars>=1.0",
    "pydantic>=2.12.5",
    "pyyaml>=6.0",
    "typer>=0.15",
]

[project.optional-dependencies]
llm = [
    "langchain-core>=0.3",
    "langchain-ollama>=0.3",
    "langchain-openai>=0.3",
    "langchain-anthropic>=0.3",
    "langchain-google-genai>=2.0",
    "langfuse>=2.10",
    "python-dotenv>=1.0",
]
api = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sse-starlette>=2.0",
]
all = [
    "policy-arena[llm,api]",
]

[project.scripts]
policy-arena = "policy_arena.cli.main:app"

[project.entry-points."policy_arena.games"]
prisoners_dilemma = "policy_arena.games.prisoners_dilemma"
public_goods = "policy_arena.games.public_goods"
ultimatum = "policy_arena.games.ultimatum"
el_farol = "policy_arena.games.el_farol"
schelling = "policy_arena.games.schelling"
sir = "policy_arena.games.sir"
stag_hunt = "policy_arena.games.stag_hunt"
battle_of_sexes = "policy_arena.games.battle_of_sexes"
hawk_dove = "policy_arena.games.hawk_dove"
chicken = "policy_arena.games.chicken"
trust_game = "policy_arena.games.trust_game"
commons = "policy_arena.games.commons"
minority_game = "policy_arena.games.minority_game"

[build-system]
requires = ["uv_build>=0.10.5,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.10",
    "pre-commit>=4.0",
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "ruff>=0.11",
]

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E",    # pycodestyle errors
  "W",    # pycodestyle warnings
  "F",    # pyflakes
  "I",    # isort (import sorting)
  "N",    # pep8-naming
  "UP",   # pyupgrade (modernize syntax)
  "B",    # flake8-bugbear (common bugs)
  "SIM",  # flake8-simplify
]
ignore = [
  "E501",  # line-too-long (handled by formatter)
  "E402",  # module-import-not-at-top (needed for load_dotenv)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B017"]
"src/policy_arena/cli/*" = ["B008"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = false
warn_unused_configs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "policy_arena.brains.llm.*",
    "policy_arena.llm.*",
    "policy_arena.tracing",
    "policy_arena.games.*.brains",
    "policy_arena.games.*.__main__",
    "policy_arena.games.*.rl_adapter",
    "policy_arena.core.extractors",
    "policy_arena.io.config_loader",
]
ignore_errors = true
